--- a/Akka Mahadevi.html
+++ b/Akka Mahadevi.html
@@ -16,7 +16,7 @@
 
     <p>One of the first poets of Kannada literature, Akka Mahadevi (1130–1160), was a well-known member of the Lingayat Shaiva sect in the 12th century. Her most significant contributions to Kannada literature are the 430 extant Vachana poems (a genre of impromptu mystical poems) and the two brief works Mantrogopya and Yogangatrividh. Compared to other saints of the movement, she wrote fewer poems.
     </p>
-    <p>Great Lingayat saints like Basavanna, Siddharama, and Allamaprabhu referred to her as Akka ("elder Sister") in honour of her high standing in the spiritual discussions held at the "Anubhava Mantapa". In the history of Karnataka and in Kannada literature, she is portrayed as an inspirational woman. She regarded the Hindu deity Shiva (also known as "Chenna Mallikarjuna") as her husband; this is known as the "madhura bhava" or "madhurya" form of devotion.
+    <p>Great Lingayat saints like Basavanna, Siddharama, and Allamaprabhu referred to her as Akka ("elder Sister") in the honour of her high standing in the spiritual discussions held at the "Anubhava Mantapa". In the history of Karnataka and in Kannada literature, she is portrayed as an inspirational woman. She regarded the Hindu deity Shiva (also known as "Chenna Mallikarjuna") as her husband; this is known as the "madhura bhava" or "madhurya" form of devotion.
     </p>
     <hr>
     <h4>Click<a href="akka_work.html ">here</a>to read more about her literary works.</h4>
